# CppPlayground

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmake-format.py  conanfile.py  macro-utils-c-5926caf4e42e98e730e6d03395788205649a3ada.tar
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/CentOS7/: Dockerfile  devcontainer.json
.devcontainer/RHEL9/: Dockerfile  devcontainer.json
.devcontainer/Ubuntu/: Dockerfile  devcontainer.json
.devcontainer/rhel/: Dockerfile  devcontainer.json
src/: Account.cpp  Account.h  CMakeLists.txt  Distance.cpp  Distance.h  Playground.cpp
src/account/: Account.cpp  CMakeLists.txt
src/account/interface/: Account.h  AccountMock.h
src/account/test/: AccountTest.cpp
src/core/: CMakeLists.txt
src/core/interface/: Factory.h  Logging.h
src/distance/: Distance.cpp  Distance.h
src/logging/: CMakeLists.txt
src/logging/interface/: Logging.h
src/worker/: CMakeLists.txt
src/worker/interface/: ProducerConsumer.h  ProducerConsumerMock.h
src/worker/test/: WorkerTest.cpp
test/: CMakeLists.txt  PlaygroundTest.cpp
test_package/: CMakeLists.txt  PlaygroundTest.cpp  cpp_lseg_test.cpp
